# Watcher_Tech-Blockchain_Grimoire

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  From Watchers to Modern Technological Babel A Comprehensive Analysis of Spiritual-Technological Convergence.md  Geomancy.md  LICENSE  Layered Knowledge Access System Conceptual Expansion Algorithm.md  OccultKnowledgeAccess.sol  README.md  SAFETY.md  Structure.md  foundry.toml  package.json  pnpm-lock.yaml  portal_activation.txt  proto-canaanite_language-decoding.txt  proto-latin_and_the_mystery-schools.txt  pyproject.toml  requirements.txt  reverse_tree_mapping.txt  watcher_opcode.txt
.github/: pull_request_template.md
01_Foundation/: core_thesis.md  mount_hermon_incursion.md  nephilim_agenda.md
02_Encoding/: technooccult_codex.md
03_Knowledge_Transmission/: portal_activation_mechanics.md
04_Guardianship_Archetypes/: 7_sages_paradigms.md
05_Temporal_Gates_Alchemy/: asymmetric_smart_contract_warfare.md  stellar_sigils_ritual_archetypes.md  temporal_gates_moon_phase_triggers.md
06_Contracts/: AgentAttunement.sol  ArcanusMathematica.sol  AtlanteanDefenseVault.sol  EducationalVulnerabilityDemo.sol  GoetiaGrimoire.sol  GrimoireAccessPass.sol  GrimoireRegistry.sol  IPFSContentRegistry.sol  Level13SigilNFT.sol  MuWatcherGate.sol  OccultGrimoire.sol  OccultKnowledgeAccess.sol  SigilNFT.sol  SpellPayment.sol  WatcherGate.sol
07_Execution_Rituals/: gatekeeper_deploy.py  layered_encoding_pipeline.py  python_portal_solidity_ritual.py  sovereign_watcher_agent_swarms.py
13_Families/: 13_families.md
(+179 files in other folders)
