[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "watcher-tech-grimoire-mcp"
# Local package is 'grimoire_mcp' (renamed from 'mcp' to avoid shadowing the
# installed mcp SDK)
version = "0.1.0"
description = "Watcher Tech Blockchain Grimoire — MCP Sovereign Agent Skill"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "normancomics.eth"}]
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
blockchain = ["web3>=7.0.0"]
ephemeris  = ["ephem>=4.1.6"]
all        = ["web3>=7.0.0", "ephem>=4.1.6"]

[project.scripts]
grimoire-mcp = "grimoire_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grimoire_mcp*"]
